# bevy-rapier-3d-poc

./: Cargo.toml
assets/: ROOM.glb  room.glb
src/: config.rs  game.rs  gltf_auto_colliders.rs  main.rs  pause.rs  player.rs  systems.rs
src/main_menu/: components.rs  mod.rs
src/main_menu/systems/: interactions.rs  layout.rs  mod.rs  ui_components.rs
