[package]
name = "scream-jam-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_rapier3d = { version = "0.24.0", features = ["simd-stable", "debug-render-3d"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
